--- a/notebooks/start_with_me_genes.ipynb
+++ b/notebooks/start_with_me_genes.ipynb
@@ -45,14 +45,26 @@
     "with open('/home/sam/genes_mri_ecg_carriers_sampleid.tsv', 'r') as my_tsv:\n",
     "    lol = list(csv.reader(my_tsv, delimiter='\\t'))\n",
     "for row in lol[1:]:\n",
-    "    if row[0] == 'TTN':\n",
-    "        continue\n",
     "    sample_list = [tensor_path_prefix + t + TENSOR_EXT for t in row[6].split(';')]\n",
     "    gene2samples[row[0]] = sample_list\n",
     "    for s in sample_list:\n",
     "        samples2genes[s] = row[0]\n",
     "[print(k, len(gene2samples[k])) for k in gene2samples]\n",
     "gene_labels = ['TTN', 'AKAP9', 'DSC2', 'NEBL', 'RYR2', 'TRDN']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('/home/sam/start_with_me_lof.tsv', mode='w') as sample_lof_file:\n",
+    "    sample_lof_writer = csv.writer(sample_lof_file, delimiter='\\t', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
+    "    sample_lof_writer.writerow(['sample_id', 'gene'])\n",
+    "    for g in gene2samples:\n",
+    "        for sample in gene2samples[g]:\n",
+    "            sample_lof_writer.writerow([os.path.splitext(os.path.basename(sample))[0], g])"
    ]
   },
   {
@@ -96,14 +108,7 @@
     "            '--model_file', '/home/sam/ml/trained_models/mri_systole_diastole_pixsize_unet_to_seg_volumes_mass_ef/mri_systole_diastole_pixsize_unet_to_seg_volumes_mass_ef.hd5',\n",
     "            '--id', 'mri_systole_diastole_unet_lv_mass_diseases']\n",
     "args = parse_args()\n",
-    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,\n",
-    "                                                                                   args.tensor_maps_out,\n",
-    "                                                                                   args.tensors, \n",
-    "                                                                                   args.batch_size,\n",
-    "                                                                                   args.valid_ratio,\n",
-    "                                                                                   args.test_ratio,\n",
-    "                                                                                   args.icd_csv,\n",
-    "                                                                                   args.balance_by_icds)\n",
+    "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,  args.tensor_maps_out,  args.tensors, args.batch_size,   args.valid_ratio, args.test_ratio, args.test_modulo, args.balance_csvs)\n",
     "model = make_multimodal_to_multilabel_model(args.model_file, args.model_layers, args.model_freeze,\n",
     "                                                args.tensor_maps_in, args.tensor_maps_out, args.activation,\n",
     "                                                args.dense_layers, args.dropout, args.mlp_concat, args.conv_layers,\n",
