--- a/notebooks/start_with_me_genes.ipynb
+++ b/notebooks/start_with_me_genes.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "# 3rd party imports\n",
     "from sklearn import manifold\n",
-    "from keras.models import Model\n",
+    "from tensorflow.keras.models import Model\n",
     "from keras import backend as K\n",
     "from IPython.display import Image\n",
     "\n",
